--- a/static/src/css/_layout.scss
+++ b/static/src/css/_layout.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
   align-items: flex-end;
   background-color: $color__carbon--5;
-  background-image: linear-gradient($color__carbon--5, #f5f5f5); // not sure what do here
+  background-image: linear-gradient($color__carbon--5, #f5f5f5);
 
   &__header {
     background-color: $color__carbon--80;
