--- a/static/src/css/modules/_badge.scss
+++ b/static/src/css/modules/_badge.scss
@@ -1,7 +1,7 @@
 .badge {
   &--purple {
     color: $color__spacesuit-white;
-    background-color: $color__purple;
+    background-color: $color__international-orange;
   }
 }
 
