--- a/static/src/js/components/DeprecatedParameterModal/DeprecatedParameterModal.scss
+++ b/static/src/js/components/DeprecatedParameterModal/DeprecatedParameterModal.scss
@@ -5,7 +5,7 @@
 
     .edsc-modal__header {
         height: 14rem;
-        background: $color__blue url('../../../assets/images/browser.svg');
+        background: $color__nasa-blue url('../../../assets/images/browser.svg');
         background-repeat: no-repeat;
         background-position: bottom center;
         align-items: center;
