--- a/static/src/js/components/OrderProgressList/OrderProgressItem.scss
+++ b/static/src/js/components/OrderProgressList/OrderProgressItem.scss
@@ -46,7 +46,7 @@
     }
 
     &--failed {
-      background-color: $color__nasa-red;
+      background-color: $color__nasa-red--shade;
     }
   }
 }
