--- a/static/src/js/components/SearchSidebar/SearchSidebarHeader.scss
+++ b/static/src/js/components/SearchSidebar/SearchSidebarHeader.scss
@@ -132,10 +132,10 @@
 
   &__button {
     font-size: 0.75rem;
-    color: $color__nasa-blue;
+    color: $color__carbon-black;
 
     &:hover {
-      color: $color__nasa-blue--shade;
+      color: $color__carbon-black;
     }
   }
 }
