--- a/static/src/js/components/Banner/Banner.scss
+++ b/static/src/js/components/Banner/Banner.scss
@@ -13,7 +13,7 @@
   }
 
   &--error {
-    background-color: $color__nasa-red;
+    background-color: $color__nasa-red--shade;
     color: $color__spacesuit-white;
 
     .banner__title {
