--- a/static/src/js/components/Banner/Banner.scss
+++ b/static/src/js/components/Banner/Banner.scss
@@ -47,7 +47,7 @@
   }
 
   &__title {
-    color: $color__white;
+    color: $color__spacesuit-white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,7 +60,7 @@
   }
 
   &__message {
-    color: $color__white;
+    color: $color__spacesuit-white;
     font-size: 0.925rem;
     font-weight: 200;
     margin: 0;
