--- a/static/src/js/components/AdminRetrievals/AdminRetrievalsList.scss
+++ b/static/src/js/components/AdminRetrievals/AdminRetrievalsList.scss
@@ -76,7 +76,7 @@
           color: $color__spacesuit-white;
 
           a {
-            color: $color__white
+            color: $color__spacesuit-white
           }
         }
 
