--- a/static/src/css/modules/_dropdown.scss
+++ b/static/src/css/modules/_dropdown.scss
@@ -36,7 +36,7 @@
   font-size: 0.875rem;
 
   &:hover {
-    background-color: lighten($color__carbon--20, 5%);
+    background-color: $color__carbon--10;
     color: $color__carbon--70;
   }
 
