--- a/static/src/js/components/GranuleResults/GranuleResultsItem.scss
+++ b/static/src/js/components/GranuleResults/GranuleResultsItem.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   background: $color__spacesuit-white;
-  border: 1px solid $color__carbon--20;
+  border: 1px solid $color__carbon--10;
   border-radius: $border-radius;
   box-shadow: $shadow__default;
   overflow: visible;
@@ -102,7 +102,7 @@
     }
 
     .granule-results-item--deemphisized & {
-      color: $color__carbon--50;
+      color: $color__carbon--40;
     }
 
     .granule-results-item--emphisized & {
@@ -143,6 +143,10 @@
 
     .panels--sm & {
       display: flex;
+    }
+
+    .granule-results-item--deemphisized & {
+      opacity: 0.75;
     }
   }
 
@@ -206,7 +210,7 @@
         color: $color__nasa-red--shade;
       }
     }
-    
+
     &--start {
       background-color: rgba($color__active-green, 0.05);
 
@@ -218,7 +222,7 @@
         color: $color__active-green;
 
         .granule-results-item--deemphisized & {
-          color: $color__active-green;
+          color: rgba($color__active-green, 0.75)
         }
       }
     }
@@ -234,7 +238,7 @@
         color: $color__nasa-red--shade;
 
         .granule-results-item--deemphisized & {
-          color: $color__nasa-red--shade;
+          color: rgba($color__nasa-red--shade, 0.75)
         }
       }
     }
@@ -243,7 +247,8 @@
   &__buttons {
     display: flex;
     width: auto;
-    background: $color__carbon--10;
+    background: $color__carbon--5;
+    border-top: 1px solid $color__carbon--20;
     border-radius: 0 0 $border-radius $border-radius;
 
     .granule-results-item--has-thumbnail & {
@@ -260,11 +265,12 @@
     z-index: 0;
     width: 2.25rem;
     height: 2.25rem;
-    background: $color__carbon--10;
+    background: $color__carbon--5;
     color: $color__carbon--40;
     text-align: center;
     border: 1px solid $color__carbon--20;
     border-left: 0;
+    border-top: 0;
     border-radius: 0;
     border-bottom: none;
     vertical-align: middle;
@@ -273,6 +279,7 @@
       color: $color__carbon--50;
       border: 1px solid lighten($color__carbon--30, 10%);
       border-bottom: none;
+      border-top: 0;
       border-left: 0;
     }
 
