--- a/static/src/js/components/SearchForm/SearchForm.scss
+++ b/static/src/js/components/SearchForm/SearchForm.scss
@@ -147,7 +147,7 @@
   &__suggestions-container {
     position: relative;
     z-index: 2;
-    background: white;
+    background: $color__spacesuit-white;
     font-size: 0.75rem;
     position: absolute;
     width: 100%;
