--- a/static/src/js/components/TemporalDisplay/TemporalDisplay.scss
+++ b/static/src/js/components/TemporalDisplay/TemporalDisplay.scss
@@ -1,5 +1,5 @@
 .temporal-display {
-  color: white;
+  color: $color__spacesuit-white;
   padding: 10px 15px;
   background: rgb(17, 17, 17);
   font-size: 1em;
