--- a/static/src/js/components/Tree/TreeItem.scss
+++ b/static/src/js/components/Tree/TreeItem.scss
@@ -32,7 +32,7 @@
         width: 3px;
         height: calc(100% - 1.25rem);
         min-height: 0.5rem;;
-        background: white;
+        background: $color__spacesuit-white;
       }
     }
 
