--- a/static/src/js/components/Tree/TreeItem.scss
+++ b/static/src/js/components/Tree/TreeItem.scss
@@ -81,12 +81,12 @@
     padding: 0;
 
     svg {
-      fill: #fff981; // not sure
+      fill: #fff981;
     }
 
     path {
       stroke-width: 35;
-      stroke: #ebd604; // not sure
+      stroke: #ebd604;
     }
   }
 
