--- a/static/src/js/components/DataQualitySummary/DataQualitySummary.scss
+++ b/static/src/js/components/DataQualitySummary/DataQualitySummary.scss
@@ -1,7 +1,7 @@
 .data-quality-summary {
   &__panel {
-    background-color: $color__pale-yellow;
-    border-bottom: 1px solid $color__pale-yellow--dark;
+    background-color: $color__carbon--5;
+    border-bottom: 1px solid $color__carbon--5;
 
     .collapse-panel__button {
       width: 100%;
@@ -13,11 +13,11 @@
       color: rgba($color__carbon-black, 0.75);
 
       &:hover {
-        background-color: $color__pale-yellow--dark;
+        background-color: $color__carbon--10;
       }
 
       &:focus {
-        outline: 3px solid $color__pale-yellow--dark;
+        outline: 3px solid $color__carbon--10;
       }
     }
 
@@ -35,8 +35,8 @@
       width: 100%;
       max-height: 100px;
       overflow-x: scroll;
-      background-color: $color__pale-yellow;
-      border-bottom: 1px solid $color__pale-yellow--dark;
+      background-color: $color__carbon--5;
+      border-bottom: 1px solid $color__carbon--5;
       padding: calc($spacer / 2) $spacer;
       font-size: 0.825rem;
       font-weight: 300;
